--- a/portfolio-html-site/styles.css
+++ b/portfolio-html-site/styles.css
@@ -2,6 +2,7 @@
 
 body {
     margin: 0px;
+    font-family: "Lato", sans-serif;
 }
 
 .container {
@@ -49,6 +50,14 @@ body {
 
 .nav-link-wrapper a:hover {
     color: black;
+}
+
+.active-nav-link {
+    border-bottom: 1px solid black;
+}
+
+.active-nav-link a {
+    color: black !important;
 }
 
 /* Portfolio Styles */
@@ -118,5 +127,25 @@ body {
 .img-darken {
     transition: 1s;
     filter: brightness(10%)
+}
+
+
+/* About page */
+
+.two-column-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.profile-image-wrapper img {
+    width: 100%;
+}
+
+.profile-content-wrapper {
+    padding: 30px;
+}
+
+.profile-content-wrapper h1 {
+    color: lightseagreen;
 }
 
